Fixed text spacing

--- a/style.scss
+++ b/style.scss
@@ -335,7 +335,6 @@ footer {
 }
 
 .newsletter-description {
-  padding: 20px 0;
   text-align: center;
   color: $gray;
 }
